# EasyStark

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
modules/: balance_checker.py  transfer.py  wallet_loader.py
