[project]
name = "EasyStark"
version = "1.0.0"
description = "Script for various tasks in the StarkNet network"
authors = [
    {name = "Dellenoam"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "starknet-py (>=0.25.0,<0.26.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
